fixed css overflow issue
git-svn-id: https://plugins.svn.wordpress.org/gutscheinaffe-widget/trunk@679754 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/styles/gutscheinaffe-widget.css
+++ b/styles/gutscheinaffe-widget.css
@@ -130,6 +130,7 @@ td.gutscheinaffe_widget-logo {
  */
 td.gutscheinaffe_widget-worth a {
 	color: #000;
+	overflow: hidden;
 }
 
 td.gutscheinaffe_widget-worth a:hover {
